2006-09-05	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* common/src/local_system.cpp:
	re-activated username-code using external userinfo-tool

	* ica/src/ica_main.h:
	* ica/src/ica_main.cpp:
	* ica/src/service.h:
	* ica/src/service.cpp:
	added service-functionality under win32

2006-09-04	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* common/src/isd_connection.cpp:
	handle ItalcAuthNone

	* ica/src/demo_server.h:
	* ica/src/demo_server.cpp:
	- create client-sockets within according threads (using
	  socket-descriptors) - fixes segfaults and other bugs on SMP-systems
	- do not rely on readyRead()-signal, use QTimer::singleShot instead

	* ica/src/isd_server.cpp:
	when doing host-based auth., pass _user-ptr to socket-dispatcher-call
	for getting peer address - fixes crash of ica when acting as
	demo-master

2006-09-01	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/x11/libvncserver/auth.c:
	* ica/src/isd_server.cpp:
	* ica/src/ivs.cpp:
	- enabled security-mechanisms
	- fixed bugs in authentication via DSA-keys

	* ica/src/isd_server.cpp:
	- bugfixes in support for host-based auth.

	* common/src/ivs_connection.cpp:
	when running for demo-purposes, use app-internal-auth-mechanism

	* ica/src/demo_server.cpp:
	- first attempts to fix similiar bugs as in ivs.cpp (multithreading)
	- do a host-based auth. for demo-clients instead of app-internal

	* ica/src/ivs.cpp:
	- build command-line-stuff within thread in which VNC-server will run
	  later (fixes segfaults on Linux-SMP-machines)

	* common/src/isd_connection.cpp:
	- initialize privDSAKey before using it when still zero within
	  authAgainstServer()
	- made __role a global variable
	- support for host-based auth.

2006-08-30	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* Makefile.am:
	added missing entries for copying win32-utils and mingwm10.dll into
	win32-package

2006-08-28	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
